<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="208dp"
        android:layout_height="263dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="100dp"
        android:contentDescription="@string/profile_picture_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/profilepicture" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="147dp"
        android:layout_height="49dp"
        android:layout_marginStart="47dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="305dp"
        android:text="@string/profile_name"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="47dp"
        android:layout_marginEnd="248dp"
        android:text="@string/profile_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="284dp"
        android:layout_height="21dp"
        android:layout_marginStart="54dp"
        android:layout_marginTop="47dp"
        android:layout_marginEnd="73dp"
        android:text="@string/email_address"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="295dp"
        android:layout_height="20dp"
        android:layout_marginStart="54dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="73dp"
        android:text="@string/phone_number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="163dp"
        android:layout_marginTop="69dp"
        android:layout_marginEnd="39dp"
        android:onClick="goToEmploymentHistory"
        android:text="@string/btn_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

</androidx.constraintlayout.widget.ConstraintLayout>